fixed gap

--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 100px;
+  margin-top: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
